Fixing issues on smaller screens (<850px). Sidebar comments were being displayed when they shouldn't

--- a/static/css/comment.css
+++ b/static/css/comment.css
@@ -80,6 +80,22 @@
   z-index:1;
 }
 
+#newComments {
+  display:none;
+  width:210px;
+  bottom:0;
+  position:absolute;
+  top:10px;
+  right:0px;
+  font-family: Helvetica, Arial, sans-serif;
+  z-index:1;
+}
+
+#newComments.active {
+  display:block;
+  z-index: 1000;
+}
+
 .comment-reply-button{
   float:right;
   display:none;
@@ -96,7 +112,7 @@
   overflow: hidden;
   right:0px;
   margin-left: 10px;
-  padding: 3px 5px;  
+  padding: 3px 5px;
   background: white;
   width:90%;
   height:20px;
